# bsf_tutorials

./: .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  FLOW.md  FLOW_TEMPLATE.md  README.md  REFACTORING-SUMMARY.md  capacitor.config.ts  eslint.config.mjs  flow.py  i18n.config.ts  netlify.toml  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts  safe-test-runner.sh  temp_start_server.sh  tsconfig.json  vitest.config.mjs
.baseline/: commit_hash.txt  coverage_output.txt  lint_output.txt  typecheck_output.txt
.claude/agents/: analyze-issue-architect.md  analyze-issue-careful.md  analyze-issue-lazy.md  backend-docs-engineer.md  code-quality-evaluator.md  convert-pdf-to-markdown.md  docs-sync-engineer.md  evaluate-code-quality.md  evaluate-frontend-quality.md  evaluate-issue-codex.md  evaluate-quality-codex.md  feature-implementer.md  implement-backend-docs.md  implement-docs-sync.md  implement-feature.md  implement-frontend-docs.md  implement-test-driven.md  implement-test-engineer.md  issue-analyzer-architect.md  issue-analyzer-careful.md  issue-analyzer-lazy.md  metadata-maintenance.md  pptx-slide-creator.md  search-internal-reference.md  (+13 more)
.claude/scripts/pdf_processor/: pdf_to_md.py  pyproject.toml
.claude/scripts/pdf_processor/src/pdf_processor/: __init__.py
.github/: BRANCH_PROTECTION.md
.other_ai/: create-issue.md  implement-issue.md  review-pull-request.md
app/: app.vue
docs/: CONTENT_GUIDANCE.md  PRD.md
public/: icons-readme.txt  manifest.webmanifest
scripts/: generate-pwa-icons.js  validate-baseline.sh
(+287 files in other folders)
